syntax = "proto3";

package driver;

option csharp_namespace = "ProtoContracts.Driver";

import "google/protobuf/timestamp.proto";

message CreateDriverRequest {
  string id = 1;                
  string name = 2;
  string phoneNumber = 3;
  string vehicleNumber = 4;
  string vehicleType = 5;
}

message CreateDriverReply {
  bool success = 1;
  string message = 2;
  string id = 3;                
  google.protobuf.Timestamp createdAt = 4;
}

service GrpcDriverService {
  rpc CreateDriver (CreateDriverRequest) returns (CreateDriverReply);
  // Get driver info by id
  rpc GetDriver (GetDriverRequest) returns (GetDriverReply);
}

message GetDriverRequest {
  string id = 1;
}

message GetDriverReply {
  bool found = 1;
  string id = 2;
  string name = 3;
  string phoneNumber = 4;
  string vehicleNumber = 5;
  string vehicleType = 6;
  google.protobuf.Timestamp createdAt = 7;
}
